Mayor changes made Now its raining Popcorns and added new functions for it

--- a/estilos.css
+++ b/estilos.css
@@ -37,7 +37,6 @@ header::before {
   position: absolute;
   width: 300px;
   transform: translateX(-50px);
-  z-index: -1;
   height: 100%;
   background-color: rgba(216, 31, 38, 1);
   border-radius: 50px;
@@ -45,11 +44,17 @@ header::before {
   border-top: 0;
   border-left: 0;
 }
+
 header {
   position: relative;
   width: fit-content;
   margin: 0 auto;
 }
+
+header * {
+  pointer-events: none;
+}
+
 header span {
   position: absolute;
   transform: rotate(-90deg) translateX(-54.5%) translateY(-40px);
@@ -58,14 +63,14 @@ header span {
   padding: 0 5px;
   font-family: "Bebas Neue", sans-serif;
   font-size: 1.5rem;
-  z-index: -1;
 }
 h1 {
+  position: relative;
   margin-top: 15%;
-  width: fit-content;
+  width: 13rem;
   font-size: 5rem;
   font-family: "Bebas Neue", sans-serif;
-  color: rgb(216, 31, 38);
+  color: white;
   text-shadow: 6px 4px 6px rgba(0, 0, 0, 0.8);
   letter-spacing: 0.05rem;
 }
